<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="2dp">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="start"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/dialog_fruitId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textColor="#C3111112"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dialog_PriceID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:justificationMode="inter_word"
                android:text="@string/logout_message"
                android:textColor="#CE939497"
                android:textSize="16sp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/signout_pref"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/complete_signout_message"
            android:textColor="#7B7C7E"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/logout_anim"
            app:layout_constraintEnd_toStartOf="@+id/logout_anim"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/logout_anim" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/logout_anim"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#C8FAE8E8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/logout" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logout_anim">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_action_button"
                android:layout_width="0dp"
                android:layout_height="60sp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/cancel_message"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:cornerRadius="15dp"
                app:elevation="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm_action_button"
                android:layout_width="0dp"
                android:layout_height="60sp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#F9D226"
                android:text="@string/confirm_message"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:cornerRadius="15dp"
                app:elevation="1dp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>